pi-cluster/deployments/serializer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: serializer
spec:
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: nginx:1.17-alpine
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
        resources:
          requests:
            memory: "50Mi"
            cpu: "100m"
          limits:
            memory: "100Mi"
            cpu: "300m"
        volumeMounts:
        - name: default-conf
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: default-conf
        configMap:
          name: default-conf
