pi-cluster/deployments/serializer/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy
  namespace: serializer
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - serializer.charlieegan3.com
    secretName: serializer-tls
  rules:
  - host: serializer.charlieegan3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: proxy
          servicePort: 80
